Support war file generation

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
+	<packaging>war</packaging>
 	<groupId>io.kall.jellymatter</groupId>
 	<artifactId>jellymatter-relay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -23,6 +24,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
